--- a/chuse/config.json
+++ b/chuse/config.json
@@ -1,3 +1,1 @@
-{
-    "adTimes": 3
-}
+{"moreFreeNum":"1","paletteFreeNum":"2","rgbFreeNum":"2","colorDetailRewardedNum":"30","colorDetailADNum":"10","cameraADNum":"10","matchDetailADNum":"5","showRewardedADTip":"true","accountState":"false"}
