--- a/chuse/config.json
+++ b/chuse/config.json
@@ -9,6 +9,6 @@
         "cameraADNum": "10",
         "matchDetailADNum": "5",
         "showRewardedADTip": "true",
-        "accountState": "true"
+        "accountState": "false"
     }
 }
